# regionalizer

./: .clang-format  .coveralls.yml  .gitignore  .gitmodules  .travis.yml  .travis_clang_script.sh  CHANGELOG  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  README.md  build.sh  check_coding_style.sh  doxygenConfigurationFile  help.txt  lang.sh  main.cpp  regionalizer-completion.bash
City/: City.cpp  City.hpp
ClosestCity/: ClosestCity.cpp  ClosestCity.hpp
Coordinates/: Coordinates.cpp  Coordinates.hpp
DatabaseReader/: DatabaseReader.cpp  DatabaseReader.hpp
FlagParser/: FlagParser.cpp  FlagParser.hpp
Gnuplot/: Gnuplot.cpp  Gnuplot.hpp
GnuplotHandler/: GnuplotHandler.cpp  GnuplotHandler.hpp
ProgressBar/: ProgressBar.cpp  ProgressBar.hpp
RandomNumberGenerator/: RandomNumberGenerator.cpp  RandomNumberGenerator.hpp
RandomNumberGeneratorInteger/: RandomNumberGeneratorInteger.cpp  RandomNumberGeneratorInteger.hpp
Region/: Region.cpp  Region.hpp
VectorOfCities/: VectorOfCities.cpp  VectorOfCities.hpp
database/: CzechRepublic  Poland-Cities002.txt  Poland-Cities010-Top10-mock.txt  cities_data  cities_data_pre_parsed  city_update_tool.java  city_update_tool2.java
po/: regionalizer.pot
po/de/: regionalizer.po
po/eo/: regionalizer.po
po/fr/: regionalizer.po
po/it/: regionalizer.po
po/pl/: regionalizer.po
po/sv/: regionalizer.po
rpm/: build-rpm.sh
rpm/rpmbuild/SPECS/: regionalizer.spec
src/: cities.cpp  cities.hpp  gettext.hpp  main.cpp
src/City/: City.cpp  City.hpp
src/Coordinate/: Coordinate.cpp  Coordinate.hpp
src/KMeans/: KMeans.cpp  KMeans.hpp
src/Latitude/: Latitude.cpp  Latitude.hpp
src/Longitude/: Longitude.cpp  Longitude.hpp
src/Region/: Region.cpp  Region.hpp
tests/: CMakeLists.txt
tests/City/: City.cpp
tests/ClosestCity/: CMakeLists.txt  ClosestCity.cpp
tests/FlagParser/: CMakeLists.txt  FlagParser.cpp
tests/city/: CMakeLists.txt  city.cpp
tests/cppVersion/: CMakeLists.txt  cppVersion.cpp
tests/databaseDiagnose/: CMakeLists.txt  databaseDiagnose.cpp
tests/databaseReader/: CMakeLists.txt  databaseReader.cpp
tests/example/: CMakeLists.txt  cppVersion.cpp
tests/progressbar/: CMakeLists.txt  progressbar.cpp
tests/randomNumberGeneratorInteger/: CMakeLists.txt  randomNumberGeneratorInteger.cpp
tests/region/: CMakeLists.txt  region.cpp
